# htd

./: CHANGELOG.md  README.md  ci.sh  pyproject.toml
.github/workflows/: build.yml  publish.yml
htd/: __init__.py
tests/: test_parse.py
