[project]
name = "htd"
version = "0.1.0"
description = "Parse time deltas from human-readable strings"
authors = [
    {name = "Baptiste Fontaine",email = "baptiste@bixoto.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1"
pytest = "^8"
ruff = "^0.9"
pytest-cov = "^6.0"

